dark mode fixed to stay for all pages

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,9 +1,5 @@
 /*in progress*/
 
-html,body {
-    height:100%
-}
-
 a {
     color: black;
 }
@@ -24,9 +20,9 @@ a:active {
     text-decoration: none;
 }
 
-html {
+/* html {
     background-color: white;
-}
+} */
 
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -315,10 +311,8 @@ button {
 }
 
 #landing-page {
-    display: block;
-    position: absolute;
-    left: 500px;
-    top: 285px;
+    text-align: center;
+    margin-top: 400px;
 }
 
 #strategy-text {
@@ -333,14 +327,6 @@ button {
     flex-wrap: wrap;
     left: 10px;
     top: 75px;
-}
-
-.dark-theme #rules-text{
-    color: white;
-}
-
-.dark-theme #strategy-text{
-    color: white;
 }
 
 #board {
@@ -382,7 +368,7 @@ button {
 .number {
     width: 95px;
     height: 95px;
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 30px;
     margin: 5px;
     font-size: 30px;
@@ -390,10 +376,6 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.dark-theme .number{
-    color: white;
 }
 
 .number-selected {
@@ -470,7 +452,8 @@ button {
 }
 
 .dark-theme .number{
-    border-color: white;
+    border-color: black;
+    background-color: white;
 }
 
 .dark-theme #numpad{
@@ -496,10 +479,19 @@ button {
     color: white;
 }
 
+.dark-theme #rules-text p,
+.dark-theme #rules-text h1,
+.dark-theme #strategy-text h1,
+.dark-theme #strategy-text p{
+        color: white !important;
+}
+
+
 .light-theme{
-    background-color: antiquewhite;
+    background-color: white;
 }
 
 .dark-theme{
     background-color: #1F2937;
 }
+
